# robot_manipulator

./: .gitignore  Dockerfile-Humble  README.md  docker-compose-humble.yaml
ros_ws/log/: latest_build
ros_ws/src/robot_controller_pkg/: CMakeLists.txt  package.xml
ros_ws/src/robot_controller_pkg/config/: robot_controllers.yaml
ros_ws/src/robot_moveit/: CMakeLists.txt  package.xml
ros_ws/src/robot_moveit/config/: kinematics.yaml  robot.srdf
ros_ws/src/robot_moveit/launch/: moveit_fake.launch.py  mtc.launch.py
ros_ws/src/robot_moveit/src/: mtc_node.cpp
ros_ws/src/robot_msgs/: CMakeLists.txt
ros_ws/src/robot_simulation_pkg/: CMakeLists.txt
ros_ws/src/robot_simulation_pkg/launch/: gazebo.launch.py
ros_ws/src/robot_simulation_pkg/rviz/: display_robot.rviz
ros_ws/src/robot_simulation_pkg/urdf/: robot.urdf.xacro  robot2.urdf.xacro
ros_ws/src/robot_utils/: CMakeLists.txt  package.xml
ros_ws/src/tuto_cmake_pkg/: CMakeLists.txt  package.xml
ros_ws/src/tuto_cmake_pkg/src/: simple_moveit_api.cpp
ros_ws/src/tuto_pkg/: package.xml
ros_ws/src/tuto_pkg/tuto_pkg/: lifecycle_node.py  simple_action_client.py  simple_parameter.py  simple_pub.py  simple_server_client.py  simple_server_service.py
tuto_ws/src/robot_controller_pkg/config/: robot_controllers.yaml
tuto_ws/src/robot_moveit/config/: moveit_controllers.yaml  robot.srdf
tuto_ws/src/robot_msgs/: package.xml
tuto_ws/src/robot_simulation_pkg/: package.xml
tuto_ws/src/tuto_cmake_pkg/: CMakeLists.txt  package.xml
tuto_ws/src/tuto_pkg/: package.xml  setup.cfg  setup.py
(+41 files in other folders)
